<resources>
    <string name="app_name">THUInfo</string>
    <string name="title_home">主页</string>
    <string name="title_news">动态</string>
    <string name="title_schedule">计划</string>
    <string name="string_loading">加载中……</string>
    <string name="report_string">反馈</string>

    <!-- Strings related to login -->
    <string name="prompt_username">学号</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="prompt_remember">自动登录</string>
    <string name="invalid_username">请输入学号</string>
    <string name="invalid_password">请输入密码</string>
    <string name="login_error">学号或密码错误</string>
    <string name="login_failed">登录失败</string>
    <string name="login_exception">登录异常</string>
    <string name="logout">退出</string>

    <!-- Strings related to main utilities -->
    <string name="score">成绩</string>
    <string name="e_card">校园卡</string>
    <string name="card_record">消费查询</string>

    <!-- Strings showing up in code -->
    <string name="clear_or_not">是否清除记住的密码？</string>
    <string name="keep_string">保留</string>
    <string name="clear_string">清除</string>
    <string name="download_succeed_string">下载完成</string>
    <string name="downloading_string">THUInfo文件下载</string>
    <string name="download_in_progress">正在下载</string>
    <string name="confirm_string">确认</string>
    <string name="cancel_string">取消</string>
    <string name="network_error_string">网络异常</string>
    <string name="timeout_retry">加载超时，请重试</string>
    <array name="slide_title_first_string">
        <item>发布仓促</item>
        <item>放心！我不会以任何形式</item>
        <item>友情提醒：</item>
    </array>
    <array name="slide_title_second_string">
        <item>仍有诸多不足之处</item>
        <item>窃取您的敏感信息</item>
        <item>别把所有功能都试个遍</item>
    </array>
    <array name="slide_main_text_string">
        <item>遇到问题，先重启两次\n还不行的话……\n\nIssue/PR\nhttps://github.com/UNIDY2002/THUInfo\n\n快捷反馈通道\n见APP内</item>
        <item>不信……可以看我源码嘛\n(*╹▽╹*)</item>
        <item>误点“一键挂失”的感觉\n可不好受\n┓( ´∀` )┏</item>
    </array>
    <string name="next_step_string">下一步</string>
    <string name="finish_string">结束</string>
    <string name="request_permission_title">哦，对了</string>
    <string name="request_permission_message">我希望申请存储权限，主要用于下载附件和保存课表图片，希望您能同意~</string>
    <string name="request_permission_ok">了解</string>
</resources>
